<resources>
    <string name="app_name">Carpool-Bijoux</string>
    <string name="search_hint">Search Tours</string>
    <string-array name="admin_array">
        <item>Coming Tours</item>
        <item>My Tours</item>
        <item>My Seats</item>
        <item>My Profile</item>
        <item>My Team</item>
        <item>Approve Registration</item>
        <item>Login</item>
    </string-array>
    <string-array name="team_array">
        <item>Coming Tours</item>
        <item>My Tours</item>
        <item>My Seats</item>
        <item>My Profile</item>
        <item>My Team</item>
        <item>Login</item>
    </string-array>
    <string-array name="member_array">
        <item>Coming Tours</item>
        <item>My Tours</item>
        <item>My Seats</item>
        <item>My Profile</item>
        <item>Login</item>
    </string-array>
    <string-array name="unknown_array">
        <item>Unknown Account</item>
        <item>Login</item>
        <item>Register</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_title">Carpool search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="frg_main_img">SelectedImage</string>
    <string name="frg_unkn_account_info">Dear,\nBefore you can start using this application, you must be registered in
         our application and your request must be approved by your team leader.\nPlease go to the registration form
          or use the login to start using this application.</string>
    <string name="frg_unkn_account_login">Login</string>
    <string name="frg_unkn_account_Register">Register</string>
    <string name="frg_login_username">User Name</string>
    <string name="frg_login_password">Password</string>
    <string name="frg_login_login">Login</string>
    <string name="frg_login_logout">Logout</string>
    <string name="frg_login_loginResult">Login result</string>
    <string name="frg_register_lastname">Lastname</string>
    <string name="frg_register_firstname">Firstname</string>
    <string name="frg_register_email">E-mail</string>
    <string name="frg_register_phone">Phone</string>
    <string name="frg_register_username">Username</string>
    <string name="frg_register_password">Password</string>
    <string name="frg_register_info">About me</string>
    <string name="frg_register_driverlicense">Driverslicense</string>
    <string name="frg_register_btn_register">Register</string>
    <string name="frg_register_result">Registration result</string>
    <string name="list_item_img_description">Image</string>
    <string name="frg_my_profile_lastname">Lastname</string>
    <string name="frg_my_profile_firstname">Firstname</string>
    <string name="frg_my_profile_email">E-mail</string>
    <string name="frg_my_profile_phone">Phone</string>
    <string name="frg_my_profile_username">Username</string>
    <string name="frg_my_profile_password">Password</string>
    <string name="frg_my_profile_info">About me</string>
    <string name="frg_my_profile_driverlicense">Driverslicense</string>
    <string name="frg_my_profile_btn_update">Update Profile</string>
    <string name="frg_my_profile_btn_create_vehicle">Create Vehicle</string>
    <string name="frg_my_profile_vehicles">My Vehicles</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="act_vehicle_title">Vehicle details</string>
    <string name="act_vehicle_id">Autonumbered ID</string>
    <string name="act_vehicle_licenseplate">Licenseplate</string>
    <string name="act_vehicle_country">Country of Registration</string>
    <string name="act_vehicle_numberOfPassengers">No. of passengers</string>
    <string name="act_vehicle_brand">Brand</string>
    <string name="act_vehicle_vehicle_type">Vehicle Type</string>
    <string name="act_vehicle_btn_vehicle_update">Update</string>
    <string name="act_vehicle_btn_vehicle_create">Create</string>
    <string name="act_vehicle_actb_new_vehicle">New Vehicle</string>
    <string name="act_vehicle_actb_del_vehicle">Delete Vehicle</string>
    <string name="act_vehicle_actb_del_vehicle_canceled">Deletion was canceled</string>
    <string name="act_tour_txtActTourDate">Date</string>
    <string name="act_tour_eTxtActTourDate">Date</string>
    <string name="act_tour_txtActTourTime">Time</string>
    <string name="act_tour_eTxtActTourTime">Time</string>
    <string name="act_tour_txtActTourVehicle">Vehicle</string>
    <string name="act_tour_eTxtActTourSeatPrice">Seat Price</string>
    <string name="act_tour_txtActTourSeatPrice">Seat Price €</string>
    <string name="act_tour_eTxtActTourFromAddress">From Address</string>
    <string name="act_tour_txtActTourFromAddress">From Address</string>
    <string name="act_tour_eTxtActTourToAddress">To Address</string>
    <string name="act_tour_txtActTourToAddress">To Address</string>
    <string name="act_tour_btnActTourUpdate">Update tour</string>
    <string name="act_tour_btnActTourSeatRequest">Request Seat</string>
    <string name="act_tour_txtActTourPassengers">Passengers</string>
    <string name="act_tour_seat_choice_pending">Pending</string>
    <string name="act_tour_seat_choice_approved">Approved</string>
    <string name="act_tour_seat_choice_delete">Delete</string>
    <string name="act_tour_seat_choice_canceled">Canceled</string>
    <string name="act_tour_seat_payment_paid">Paid</string>
    <string name="act_tour_seat_payment_not_paid">Not paid</string>
    <string name="act_tour_actb_new_tour">New Tour</string>
    <string name="act_tour_actb_del_tour">Delete Tour</string>
    <string name="act_tour_actb_track_tour">Start tracking</string>
    <string name="act_user_lastname">Lastname</string>
    <string name="act_user_firstname">Firstname</string>
    <string name="act_user_email">E-mail</string>
    <string name="act_user_phone">Phone</string>
    <string name="act_user_info">About me</string>
    <string name="act_user_driverlicense">Driverslicense</string>
    <string name="act_user_btn_update">Update Profile</string>
    <string name="act_user_chb_approved">Approved user</string>
    <string name="act_maps_btn_normal">Maps</string>
    <string name="act_maps_btn_satellite">Satellite</string>
    <string name="act_maps_btn_hybrid">Hybrid</string>
    <string name="act_maps_btn_terrain">Terrain</string>
</resources>