<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.louage.bijoux.TourActivity" >

    <item
        android:id="@+id/create_new_tour"
        android:orderInCategory="100"
        android:title="@string/act_tour_actb_new_tour"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete_tour"
        android:orderInCategory="200"
        android:title="@string/act_tour_actb_del_tour"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/sync_tracking_data"
        android:orderInCategory="50"
        android:title="@string/act_tour_actb_track_tour"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom|withText"></item>

</menu>
