<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/frg_login_username"
        android:textSize="@dimen/TextSize20" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/frg_login_password"
        android:inputType="textPassword"
        android:textSize="@dimen/TextSize20" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frg_login_login"
        android:textSize="@dimen/TextSize20" />

    <TextView
        android:id="@+id/txtLoginResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.81"
        android:text="@string/frg_login_loginResult"
        android:textSize="@dimen/TextSize20" />

</LinearLayout>