<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.louage.bijoux.userinterface.MapsActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/btnMaps"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="myClickHandler"
        android:text="@string/act_maps_btn_normal" />

    <Button
        android:id="@+id/btnSat"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnMaps"
        android:onClick="myClickHandler"
        android:text="@string/act_maps_btn_satellite" />

    <Button
        android:id="@+id/btnHybrid"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnSat"
        android:onClick="myClickHandler"
        android:text="@string/act_maps_btn_hybrid" />

    <Button
        android:id="@+id/btnTerrain"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnHybrid"
        android:onClick="myClickHandler"
        android:text="@string/act_maps_btn_terrain" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnMaps" />

</RelativeLayout>

